# Machine_Learning_Intro

./: .gitignore  README.md  main.py  pyproject.toml
binder/: requirements.txt
clase1/: clase1a.ipynb  clase1b.ipynb  clase1c.ipynb  ventas_2024.csv
clase2/: clase2a.ipynb  clase2b.ipynb
clase3/: clase3a.ipynb
clase4/: clase4a.ipynb  clase4b.ipynb
clase5/: clase5.ipynb  pima_solution.csv  pima_test.csv  pima_train.csv
clase6/: clase6.ipynb
