[project]
name = "machine-learning-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib<3.8.0",
    "pandas>=1.3.0,<2.2.0",
    "pycaret==3.3.2",
    "scikit-learn>=1.0.0,<1.5.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "xgboost>=3.2.0",
]
